@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added L<Krang::Publisher>->publish_context() - a means of storing
+arguments during the publish of a given story. [Peter]
+
+=item *
+
 Added storage of sort order and sort by to session cache in 
 L<Krang::HTMLPager>. [Matt]
 
